lab3_1
