# public/openapi.yaml
@@ -30,9 +30,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Lists"
-        '404':
-          description: A paged array of lists
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
+        '422':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
     post:                                                                 #POST api/v1/lists
       summary: Create a list 
       operationId: createList
@@ -50,18 +54,18 @@ paths:
               title:
                 type: string 
       responses:
-        '201':
+        '200':
           description: Created
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/List"
-        default: 
-          description: unexpected error
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
+        '422':
+          description: BadRequest
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
   /lists/{listId}:
     get:                                                                  #GET api/v1/lists/{listID}
       summary: Info for a cpecific list
@@ -81,13 +85,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/List" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseMyListArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
     put:                                                                  #PUT api/v1/lists/{listID}
       summary: Replace a cpecific list
       operationId: replaceListById
@@ -116,13 +120,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/List" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseMyListArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
     patch:                                                                #PATCH api/v1/lists/{listID}
       summary: Patch a cpecific list
       operationId: patchListById
@@ -151,13 +155,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/List" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseMyListArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
     delete:                                                               #DELETE api/v1/lists/{listID}
       summary: Delete a cpecific list
       operationId: deleteListById
@@ -173,12 +177,12 @@ paths:
       responses:
         '200':
           description: Expected response to a valid request
-        default:
-          description: unexpected error 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseMyListArrayRespose"
   /tasks:
     get:                                                                  #GET api/v1/tasks
       summary: List all tasks of the list
@@ -213,7 +217,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Tasks"
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
+        '422':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
     post:                                                                 #POST api/v1/tasks
       summary: Create a task
       operationId:  createTask
@@ -235,18 +245,18 @@ paths:
                 type: integer 
                 format: int64
       responses:
-        '201':
+        '200':
           description: Created
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Task"
-        default: 
-          description: unexpected error
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
+        '422':
+          description: BadRequest
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
   /tasks/{taskId}:                                                        #GET api/v1/tasks/{taskID}
     get:
       summary: Info for a cpecific task
@@ -266,13 +276,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Task" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseTaskArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
     put:                                                                  #PUT api/v1/tasks/{taskID}
       summary: Replace a cpecific task
       operationId: replaceTaskById
@@ -305,13 +315,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Task" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseTaskArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
     patch:                                                                #PATCH api/v1/tasks/{taskID}
       summary: Patch a cpecific task
       operationId: patchTaskById
@@ -343,13 +353,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Task" 
-        default:
-          description: unexpected error 
+                $ref: "#/components/schemas/BaseTaskArrayRespose" 
+        '422':
+          description: BadRequest
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
     delete:                                                               #DELETE api/v1/tasks/{taskID}
       summary: Delete a cpecific task
       operationId: deleteTaskById
@@ -365,12 +375,16 @@ paths:
       responses:
         '200':
           description: Expected response to a valid request
-        default:
-          description: unexpected error 
           content:
             application/json:
-              schemas:
-                $ref: "#/components/schemas/Error"
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
+        '422':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BaseTaskArrayRespose"
 components:
   schemas:
     List: 
@@ -420,4 +434,72 @@ components:
           type: integer
           format: int32
         message:
+          type: string
+    BaseTaskArrayRespose:
+      type: object
+      required:
+        - data
+        - errors
+        - meta
+      properties:
+        data:
+          type: array
+          item: 
+            ref: "#/components/schemas/Task"
+        errors: 
+          type: array
+          item: 
+            ref: "#/components/schemas/Error"
+        meta: 
+          type: string
+    BaseTaskRespose:
+      type: object
+      required:
+        - data
+        - errors
+        - meta
+      properties:
+        data:
+          type: object
+          item: 
+            ref: "#/components/schemas/Task"
+        errors: 
+          type: array
+          item: 
+            ref: "#/components/schemas/Error"
+        meta: 
+          type: string
+    BaseMyListArrayRespose:
+      type: object
+      required:
+        - data
+        - errors
+        - meta
+      properties:
+        data:
+          type: array
+          item: 
+            ref: "#/components/schemas/MyList"
+        errors: 
+          type: array
+          item: 
+            ref: "#/components/schemas/Error"
+        meta: 
+          type: string
+    BaseMyListRespose:
+      type: object
+      required:
+        - data
+        - errors
+        - meta
+      properties:
+        data:
+          type: object
+          item: 
+            ref: "#/components/schemas/Task"
+        errors: 
+          type: array
+          item: 
+            ref: "#/components/schemas/Error"
+        meta: 
           type: string
